deploy: d412fa262a89fccb0466f2aad67621cfe68ffa3c

--- a/com.kubelt.rpc.schema.parse.html
+++ b/com.kubelt.rpc.schema.parse.html
@@ -34,10 +34,10 @@
 					<pre class="brush: clojure">(ns com.kubelt.rpc.schema.parse
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.rpc.schema.util :as rpc.schema.util]
+   [com.kubelt.lib.error :as lib.error]
    [com.kubelt.rpc.schema.expand :as rpc.schema.expand]
-   [com.kubelt.rpc.schema.validate :as rpc.schema.validate]
-   [com.kubelt.lib.error :as lib.error]))</pre>
+   [com.kubelt.rpc.schema.util :as rpc.schema.util]
+   [com.kubelt.rpc.schema.validate :as rpc.schema.validate]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -83,16 +83,87 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Given a method map, return a vector of keywordized parameter names.</p><p>TODO make private</p>
+					<p>Given a method map, return a vector of all parameter names after keywordization.</p><p>TODO make private</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn method-&gt;param-names
+					<pre class="brush: clojure">(defn params-all
   [{:keys [params] :as method}]
   {:pre [(map? method)]}
   (reduce (fn [a {param-name :name}]
-            (let [path (rpc.schema.util/name-&gt;path param-name)]
-              (conj a path)))
+            (let [param-kw (rpc.schema.util/s-&gt;kw param-name)]
+              (conj a param-kw)))
           [] params))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Given a map describing a parameter, return true if the parameter is marked as being required, and false if the parameter is optional. A required parameter is one that has the :required key with a value of true. By default parameters are not required.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn param-required?
+  [param]
+  (= true (get param :required false)))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Given a method map, return a vector of keywordized parameter names for just those parameters that are required.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn params-required
+  [{:keys [params] :as method}]
+  {:pre [(map? method)]}
+  (reduce (fn [a {param-name :name :as param}]
+            (if (param-required? param)
+              (conj a (rpc.schema.util/s-&gt;kw param-name))
+              a))
+          [] params))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Given a method map, return a vector of keywordized parameter names for just those parameters that are optional.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn params-optional
+  [{:keys [params] :as method}]
+  {:pre [(map? method)]}
+  (reduce (fn [a {param-name :name :as param}]
+            (if-not (param-required? param)
+              (conj a (rpc.schema.util/s-&gt;kw param-name))
+              a))
+          [] params))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Given a method map, return a map of the parameters of the RPC call. The keys of the map are keywordized versions of the string parameter name, and the values are maps describing the parameter.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn method-&gt;params
+  [{:keys [params] :as method}]
+  {:pre [(map? method)]}
+  (reduce (fn [m {param-name :name :as param}]
+            (let [param-kw (rpc.schema.util/s-&gt;kw param-name)]
+              (assoc m param-kw param)))
+          {}
+          params))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Given a method, return a map from keywordized parameter name to the schema that may be used to validate the values supplied for that parameter.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn method-&gt;schemas
+  [{:keys [params] :as method}]
+  {:pre [(map? method)]}
+  (into {} (map (fn [{param-name :name schema :schema}]
+                  (let [param-kw (rpc.schema.util/s-&gt;kw param-name)]
+                    ;; TODO translate schema into malli. For now we just
+                    ;; return the supplied JSON Schema.
+                    [param-kw schema]))
+                params)))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -106,12 +177,24 @@
   (letfn [(f [m method]
             (let [method-name (get method :name)
                   method-summary (get method :summary)
-                  method-params (method-&gt;param-names method)
+                  params-all-kw (params-all method)
+                  params-req-kw (params-required method)
+                  params-opt-kw (params-optional method)
+                  params (method-&gt;params method)
+                  schemas (method-&gt;schemas method)
+                  ;; result
                   path (rpc.schema.util/name-&gt;path method-name)
                   method {:method/name method-name
                           :method/summary method-summary
-                          :method/params method-params
-                          :method/raw method}]
+                          :method/params params
+                          :method.params/all params-all-kw
+                          :method.params/required params-req-kw
+                          :method.params/optional params-opt-kw
+                          :method.params/schemas schemas
+                          ;; Include this to see the original schema
+                          ;; definition of the method.
+                          ;;:method/raw method
+                          }]
               (assoc m path method)))]
     (let [methods (get schema :methods [])]
       (reduce f {} methods))))</pre>
@@ -141,18 +224,18 @@
       ;; If no errors are detected, expand the schema, i.e. replace
       ;; internal references to definitions by the definitions
       ;; themselves.
-      (if-let [schema (rpc.schema.expand/expand schema)]
-        (let [rpc-version (schema-&gt;version schema)
-              rpc-metadata (schema-&gt;metadata schema)
-              rpc-servers (schema-&gt;servers schema)
-              ;; Generate a map from &quot;path&quot; (a vector of keywords
-              ;; representing an available RPC call) to a descriptive
-              ;; map.
-              rpc-methods (schema-&gt;methods schema)]
-          {:rpc/version rpc-version
-           :rpc/metadata rpc-metadata
-           :rpc/servers rpc-servers
-           :rpc/methods rpc-methods})))))</pre>
+      (let [schema (rpc.schema.expand/expand schema)
+            rpc-version (schema-&gt;version schema)
+            rpc-metadata (schema-&gt;metadata schema)
+            rpc-servers (schema-&gt;servers schema)
+            ;; Generate a map from &quot;path&quot; (a vector of keywords
+            ;; representing an available RPC call) to a descriptive
+            ;; map.
+            rpc-methods (schema-&gt;methods schema)]
+        {:rpc/version rpc-version
+         :rpc/metadata rpc-metadata
+         :rpc/servers rpc-servers
+         :rpc/methods rpc-methods}))))</pre>
 				</td>
 			</tr>
 			<tr>
