--- a/com.kubelt.spec.core.config.html
+++ b/com.kubelt.spec.core.config.html
@@ -33,8 +33,9 @@
 				<td class="codes">
 					<pre class="brush: clojure">(ns com.kubelt.spec.core.config
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
-  (:require [com.kubelt.spec.core.config.general :as general]
-            [com.kubelt.spec.core.config.security :as security]))</pre>
+  (:require
+   [com.kubelt.spec.core.config.general :as general]
+   [com.kubelt.spec.core.config.security :as security]))</pre>
 				</td>
 			</tr>
 			<tr>
