--- a/com.kubelt.spec.core.config.security.html
+++ b/com.kubelt.spec.core.config.security.html
@@ -153,7 +153,8 @@
 					
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(def policies [:vector policy])</pre>
+					<pre class="brush: clojure">(def policies
+  [:vector policy])</pre>
 				</td>
 			</tr>
 			<tr>
@@ -161,7 +162,8 @@
 					
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(def capabilities [:vector capability])</pre>
+					<pre class="brush: clojure">(def capabilities
+  [:vector capability])</pre>
 				</td>
 			</tr>
 			<tr>
