--- a/com.kubelt.rpc.request.html
+++ b/com.kubelt.rpc.request.html
@@ -34,6 +34,7 @@
 					<pre class="brush: clojure">(ns com.kubelt.rpc.request
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
+   [com.kubelt.lib.error :as lib.error]
    [com.kubelt.lib.json :as lib.json]
    [com.kubelt.lib.uuid :as lib.uuid]
    [com.kubelt.rpc.path :as rpc.path]))</pre>
@@ -86,8 +87,8 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn- make-body
-  [path method]
-  {:pre [(rpc.path/path? path) (map? method)]}
+  [path method params]
+  {:pre [(rpc.path/path? path) (every? map? [method params])]}
   (let [;; Every RPC request must have a unique identifier.
         request-id (make-request-id)
         ;; The version of the JSON-RPC spec that we conform to.
@@ -95,12 +96,70 @@
         ;; The original name of the RPC method to call is stored in the
         ;; method map.
         method-name (get method :method/name)
-        params []]
+        ;; Get the list of keywords representing every parameter
+        ;; supported by this RPC method.
+        all-params (get method :method.params/all)
+        ;; Collect parameters from the supplied parameter map, removing
+        ;; any nil entries.
+        params (filter some? (map #(get params %) all-params))]
     (lib.json/edn-&gt;json-str
      {:id request-id
       :jsonrpc rpc-version
       :method method-name
       :params params})))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>from-params-map</h2>Given a map of parameters from keyword parameter name to parametervalue, validate that the map has the required parameters and returnit if so. Otherwise, return an error map.
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn from-params-map
+  [method params]
+  {:pre [(every? map? [method params])]}
+  ;; TODO check that all required params were supplied
+  ;; TODO Check for extraneous parameters (only if :strict? option enabled)
+  (let [;; TODO validate parameter value against schema.
+        param-valid? (constantly true)]
+    (into {} (map (fn [[param-kw param-val :as pair]]
+                    (if-let [param (get-in method [:method/params param-kw])]
+                      (let [result (param-valid? param param-val)]
+                        (if (lib.error/error? result)
+                          [param-kw result]
+                          pair))
+                      [param-kw (lib.error/error &quot;no such parameter&quot; :parameter param-kw)]))
+                  params))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>from-params-vec</h2>Given a vector of parameter values for a method, and a map describingthe method, return a map from parameter name to parametervalue. E.g. if the method has parameters [:a :b], and we are giventhe parameters [:x :y], return {:a :x, :b :y}, or an error map ifsome error occurred.
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn from-params-vec
+  [method params]
+  {:pre [(map? method) (vector? params)]}
+  (let [;; A vector of parameter names (as keywords).
+        params-kw (get method :method.params/all)
+        ;; A map from parameter name to parameter value.
+        params-map (zipmap params-kw params)]
+    (from-params-map method params-map)))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -122,14 +181,10 @@
      (from-method path method params defaults)))
   ([path method params options]
    {:pre [(vector? path) (every? map? [method params options])]}
-   ;; TODO allow specification of parameters as a sequence, in which
-   ;; case the position of the parameter aligns with the parameter
-   ;; definition list in the schema
-   ;; TODO allow specification of parameters as a map, in which case the
-   ;; map keys correspondond to the method parameter names.
-   ;; TODO validate parameters
-   (let [body (make-body path method)
+   (let [body (make-body path method params)
          request (http-request body options)]
+     ;; TODO should we merge the method map into the result, rather than
+     ;; storing it as the value of the :rpc/method key?
      {:com.kubelt/type :kubelt.type/rpc.request
       ;; TODO add a :rpc.param/&lt;name&gt; for each param that includes metadata,
       ;; schema, etc.
