--- a/com.kubelt.rpc.schema.expand.html
+++ b/com.kubelt.rpc.schema.expand.html
@@ -43,25 +43,6 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<h2>ref-loc?</h2>A reference is a map with a :\$ref key, whose value is a stringreference to another location in the schema, e.g.{:\$ref "#/components/examples/fooBar"}.
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure"></pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(defn- ref-loc?
-  [loc]
-  (let [node (zip/node loc)]
-    (and (map? node) (contains? node :\$ref))))</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
 					<h2>replace-ref</h2>NB: must return a loc that is <em>just before</em> the next loc ofinterest (in a depth-first traversal).
 				</td>
 				<td class="codes">
@@ -109,7 +90,7 @@
   (loop [loc (rpc.schema.zip/schema-zip schema)]
     (if (zip/end? loc)
       (zip/root loc)
-      (recur (zip/next (if (ref-loc? loc)
+      (recur (zip/next (if (rpc.schema.zip/ref-loc? loc)
                          (replace-ref loc schema)
                          loc))))))</pre>
 				</td>
