--- a/com.kubelt.rpc.schema.validate.html
+++ b/com.kubelt.rpc.schema.validate.html
@@ -34,33 +34,55 @@
 					<pre class="brush: clojure">(ns com.kubelt.rpc.schema.validate
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.lib.error :as lib.error]))</pre>
+   [clojure.zip :as zip])
+  (:require
+   [com.kubelt.lib.error :as lib.error]
+   [com.kubelt.rpc.schema.util :as rpc.schema.util]
+   [com.kubelt.rpc.schema.zip :as rpc.schema.zip]))</pre>
 				</td>
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Return a set of all references (\$ref) found in the schema.</p><p>TODO make this fn private</p>
+					<p>Extract the ref at the given location and add it to the provided set, returning the set.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn refs
+					<pre class="brush: clojure">(defn- collect-ref
+  [loc ref-set]
+  (let [node (zip/node loc)
+        \$ref (:\$ref node)]
+    (conj ref-set \$ref)))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Return a set of all references (\$ref) found in the schema.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn- refs
   [schema]
-  (let [f (fn [a x])]
-    ;; TODO walk the schema and collect a set of all the refs that are
-    ;; found.
-    (reduce f #{} schema)))</pre>
+  (loop [loc (rpc.schema.zip/schema-zip schema)
+         ref-set #{}]
+    (if (zip/end? loc)
+      ref-set
+      (recur (zip/next loc) (if (rpc.schema.zip/ref-loc? loc)
+                              (collect-ref loc ref-set)
+                              ref-set)))))</pre>
 				</td>
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Find all \$ref and look them up to confirm that they're provided in the schema. Return a vector of just the missing refs.</p><p>TODO make fn private</p>
+					<p>Find all \$ref and look them up to confirm that they're provided in the schema. Return a set of just the missing refs.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn missing-refs
+					<pre class="brush: clojure">(defn- missing-refs
   [schema]
   (let [ref-set (refs schema)]
-    ;; TODO look up each ref to confirm that it exists
-    ;; TODO return only the missing items
-    #{}))</pre>
+    (reduce (fn [ref-set \$ref]
+              (if-not (rpc.schema.util/lookup \$ref schema)
+                (conj ref-set \$ref)
+                ref-set))
+            #{}
+            ref-set)))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -79,9 +101,9 @@
 					<pre class="brush: clojure">(defn validate
   [schema]
   ;; TODO use guards
-  (let [missing (missing-refs schema)]
-    (if-not (empty? missing)
-      (lib.error/error {:message &quot;missing \$refs&quot; :missing missing})
+  (let [missing-set (missing-refs schema)]
+    (if-not (empty? missing-set)
+      (lib.error/error {:message &quot;missing \$refs&quot; :missing missing-set})
       schema)))</pre>
 				</td>
 			</tr>
