--- a/index.html
+++ b/index.html
@@ -333,6 +333,18 @@
 								<a href="com.kubelt.ddt.cmds.rpc.call.html">com.kubelt.ddt.cmds.rpc.call</a>
 							</li>
 							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.core.html">com.kubelt.ddt.cmds.rpc.core</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.core.config.html">com.kubelt.ddt.cmds.rpc.core.config</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.core.config.get.html">com.kubelt.ddt.cmds.rpc.core.config.get</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.core.config.set.html">com.kubelt.ddt.cmds.rpc.core.config.set</a>
+							</li>
+							<li>
 								<a href="com.kubelt.ddt.cmds.rpc.ls.html">com.kubelt.ddt.cmds.rpc.ls</a>
 							</li>
 							<li>
