--- a/com.kubelt.ddt.cmds.rpc.core.html
+++ b/com.kubelt.ddt.cmds.rpc.core.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.rpc</h1>
+							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.core</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,15 +28,13 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>CLI setup for 'rpc' sub-command.</p>
+					<p>RPC core options</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc
-  {:author &quot;Proof Zero Inc.&quot;}
+					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.core
+  {:copyright &quot;ⓒ2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.ddt.cmds.rpc.call :as rpc.call]
-   [com.kubelt.ddt.cmds.rpc.core :as rpc.core]
-   [com.kubelt.ddt.cmds.rpc.ls :as rpc.ls]))</pre>
+   [com.kubelt.ddt.cmds.rpc.core.config :as core.config]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -45,13 +43,11 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defonce command
-  {:command &quot;rpc &lt;command&gt;&quot;
-   :desc &quot;Work with RPC APIs&quot;
+  {:command &quot;core &lt;command&gt;&quot;
+   :desc &quot;Work with RPC core APIs&quot;
    :builder (fn [^js yargs]
               (-&gt; yargs
-                  (.command (clj-&gt;js rpc.call/command))
-                  (.command (clj-&gt;js rpc.ls/command))
-                  (.command (clj-&gt;js rpc.core/command))
+                  (.command (clj-&gt;js core.config/command))
                   (.demandCommand)))})</pre>
 				</td>
 			</tr>
