deploy: 9e4947753677a711e289a680ad978daa787ca695

--- a/com.kubelt.lib.error.html
+++ b/com.kubelt.lib.error.html
@@ -90,9 +90,16 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn error
-  [e]
-  {:com.kubelt/type :kubelt.type/error
-   :error e})</pre>
+  ([message]
+   (error message nil))
+  ([message data]
+   (error message data nil))
+  ([message data cause]
+   (cond-&gt;
+    {:com.kubelt/type :kubelt.type/error
+     :error message}
+     data (assoc :data data)
+     cause (assoc :cause cause))))</pre>
 				</td>
 			</tr>
 			<tr>
