--- a/com.kubelt.spec.rpc.available.html
+++ b/com.kubelt.spec.rpc.available.html
@@ -37,7 +37,7 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<h2>options</h2>The options map that can be passed to the RPC client (methods) function.
+					<h2>options</h2>The options map that can be passed to the (available) function thatis used to explore the collection of API methods available via an RPCclient.
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure"></pre>
