--- a/com.kubelt.spec.rpc.discover.html
+++ b/com.kubelt.spec.rpc.discover.html
@@ -54,7 +54,7 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<h2>options</h2>
+					<h2>options</h2>Describes the options that may be passed to the (discover) functionthat performs OpenRPC schema discovery and injects the fetched schemainto an RPC client.
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure"></pre>
