--- a/com.kubelt.spec.rpc.inflate.html
+++ b/com.kubelt.spec.rpc.inflate.html
@@ -54,7 +54,7 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<h2>options</h2>
+					<h2>options</h2>The options that may be passed to the schema (inflate) function toload an OpenRPC schema file into an RPC client.
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure"></pre>
