--- a/com.kubelt.spec.rpc.schema.html
+++ b/com.kubelt.spec.rpc.schema.html
@@ -34,7 +34,7 @@
 					<pre class="brush: clojure">(ns com.kubelt.spec.rpc.schema
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.spec.openrpc.schema :as spec.openrpc.schema]))</pre>
+   [com.kubelt.spec.openrpc :as spec.openrpc]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -51,7 +51,7 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(def schema
-  spec.openrpc.schema/schema)</pre>
+  spec.openrpc/root)</pre>
 				</td>
 			</tr>
 			<tr>
