--- a/com.kubelt.spec.openrpc.html
+++ b/com.kubelt.spec.openrpc.html
@@ -34,11 +34,11 @@
 					<pre class="brush: clojure">(ns com.kubelt.spec.openrpc
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.spec.openrpc.method :as openrpc.method]
-   [com.kubelt.spec.openrpc.server :as openrpc.server]
    [com.kubelt.spec.openrpc.component :as openrpc.component]
+   [com.kubelt.spec.openrpc.external :as openrpc.external]
    [com.kubelt.spec.openrpc.info :as openrpc.info]
-   [com.kubelt.spec.openrpc.external :as openrpc.external]))</pre>
+   [com.kubelt.spec.openrpc.method :as openrpc.method]
+   [com.kubelt.spec.openrpc.server :as openrpc.server]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -63,7 +63,7 @@
 					
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(def schema
+					<pre class="brush: clojure">(def root
   [:map
    {:closed true
     :description &quot;The root object of an OpenRPC document.&quot;}
