--- a/com.kubelt.rpc.html
+++ b/com.kubelt.rpc.html
@@ -38,7 +38,7 @@
   (:require
    [malli.core :as malli])
   (:require
-   [com.kubelt.lib.error :as lib.error]
+   [com.kubelt.lib.error :as lib.error :refer-macros [conform*]]
    [com.kubelt.lib.http :as lib.http]
    [com.kubelt.proto.http :as proto.http]
    [com.kubelt.rpc.client :as rpc.client]
@@ -95,7 +95,7 @@
    (let [defaults {}]
      (init defaults)))
   ([options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.init/options options]
     ;; TODO Use the OpenRPC &quot;Server&quot; block to configure RPC endpoints
     ;; using URL templates.
@@ -134,7 +134,7 @@
    (let [defaults {:methods/sort? true}]
      (available client path defaults)))
   ([client path options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc/path path]
     [spec.rpc.available/options options]
@@ -196,7 +196,7 @@
    (let [defaults {}]
      (doc client path defaults)))
   ([client path options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc/path path]
     [spec.rpc.doc/options options]
@@ -242,9 +242,9 @@
 				<td class="codes">
 					<pre class="brush: clojure">(defn prepare
   [client path params]
-  ;; Use lib.error/conform* to ensure that each argument matches
+  ;; Use conform* to ensure that each argument matches
   ;; its schema.
-  (lib.error/conform*
+  (conform*
    [spec.rpc.client/client client]
    [spec.rpc/path path]
    [spec.rpc/params params]
@@ -290,7 +290,7 @@
     (let [defaults {}]
       (execute client request defaults)))
   ([client request options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc.request/request request]
     [spec.rpc.execute/options options]
@@ -321,7 +321,7 @@
    (let [defaults {}]
      (call client path params defaults)))
   ([client path params options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc/path path]
     [spec.rpc/params params]
@@ -350,7 +350,7 @@
    (let [defaults {}]
      (rpc-fn client path defaults)))
   ([client path options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc/path path]
     [spec.rpc.call/options options]
