--- a/com.kubelt.rpc.schema.html
+++ b/com.kubelt.rpc.schema.html
@@ -34,7 +34,7 @@
 					<pre class="brush: clojure">(ns com.kubelt.rpc.schema
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.lib.error :as lib.error]
+   [com.kubelt.lib.error :as lib.error :refer-macros [conform*]]
    [com.kubelt.rpc.schema.fs :as rpc.schema.fs]
    [com.kubelt.rpc.schema.parse :as rpc.schema.parse]
    [com.kubelt.rpc.schema.util :as rpc.schema.util]
@@ -67,7 +67,7 @@
    (let [defaults {}]
      (schema client prefix schema-doc defaults)))
   ([client prefix schema-doc options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc.client/prefix prefix]
     [spec.rpc.schema/schema schema-doc]
@@ -103,7 +103,7 @@
    (let [defaults {}]
      (inflate client prefix filename defaults)))
   ([client prefix filename options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc.client/prefix prefix]
     [spec.rpc.inflate/filename filename]
@@ -140,7 +140,7 @@
    (let [defaults {}]
      (discover client prefix url defaults)))
   ([client prefix url options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc.client/prefix prefix]
     [spec.rpc.discover/url url]
@@ -169,7 +169,7 @@
    (let [defaults {}]
      (http client prefix url defaults)))
   ([client prefix url options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc.client/prefix prefix]
     [spec.rpc.http/url url]
@@ -198,7 +198,7 @@
    (let [defaults {}]
      (github client prefix repo defaults)))
   ([client prefix repo options]
-   (lib.error/conform*
+   (conform*
     [spec.rpc.client/client client]
     [spec.rpc.client/prefix prefix]
     [spec.rpc.github/repo repo]
