deploy: 9a5b434b045711e2ad9049a1be01747cc8d0b6ae

--- a/com.kubelt.rpc.schema.util.html
+++ b/com.kubelt.rpc.schema.util.html
@@ -127,7 +127,8 @@
 					
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(alter-var-root #'lookup memoize)</pre>
+					<pre class="brush: clojure">#?(:clj (alter-var-root #'lookup memoize)
+   :cljs (def lookup (memoize lookup) ))</pre>
 				</td>
 			</tr>
 			<tr>
