deploy: 0b0e62442a5336b43d8bbc90947bc96e10a299af

--- a/com.kubelt.rpc.schema.util.html
+++ b/com.kubelt.rpc.schema.util.html
@@ -128,7 +128,7 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">#?(:clj (alter-var-root #'lookup memoize)
-   :cljs (def lookup (memoize lookup) ))</pre>
+   :cljs (set! lookup (memoize lookup)))</pre>
 				</td>
 			</tr>
 			<tr>
