deploy: 0652ca7371e3b261cf1b947bd01f875e09ba4d31

--- a/com.kubelt.ddt.auth.html
+++ b/com.kubelt.ddt.auth.html
@@ -89,12 +89,15 @@
                     (-&gt; (sdk.core/authenticate! kbt address)
                         (lib.promise/then on-authenticate)
                         (lib.promise/catch
-                            (fn [e]
-                              (println (ex-message e))
-                              (prn (ex-data e))))
+                         (fn [e]
+                           (println (ex-message e))
+                           (prn (ex-data e))))
                         (lib.promise/finally
                           (fn []
-                            (sdk/halt! kbt)))))))))))))</pre>
+                            (sdk/halt! kbt))))))
+                 (lib.promise/catch
+                  (fn [e]
+                    (println e))))))))))</pre>
 				</td>
 			</tr>
 			<tr>
