--- a/com.kubelt.spec.rpc.init.html
+++ b/com.kubelt.spec.rpc.init.html
@@ -88,7 +88,8 @@
   [:map
    [:http/client {:optional true} http-client]
    [:http/user-agent {:optional true} user-agent]
-   [:rpc/jwt {:optional true} spec.jwt/jwt]])</pre>
+   ;; TODO flip :rpc/jwt to spec.jwt/jwt once we use/expect decrypted jwt value (in BE too)
+   [:rpc/jwt {:optional true} :string]])</pre>
 				</td>
 			</tr>
 			<tr>
