--- a/com.kubelt.rpc.schema.html
+++ b/com.kubelt.rpc.schema.html
@@ -33,11 +33,10 @@
 				<td class="codes">
 					<pre class="brush: clojure">(ns com.kubelt.rpc.schema
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
-  (:require
-   [com.kubelt.lib.error :as lib.error :refer-macros [conform*]]
+   (:require
+   [com.kubelt.lib.error :as lib.error :refer [conform*] :refer-macros [conform*]]
    [com.kubelt.rpc.schema.fs :as rpc.schema.fs]
    [com.kubelt.rpc.schema.parse :as rpc.schema.parse]
-   [com.kubelt.rpc.schema.util :as rpc.schema.util]
    [com.kubelt.spec.rpc.client :as spec.rpc.client]
    [com.kubelt.spec.rpc.discover :as spec.rpc.discover]
    [com.kubelt.spec.rpc.github :as spec.rpc.github]
