--- a/com.kubelt.ddt.auth.html
+++ b/com.kubelt.ddt.auth.html
@@ -81,12 +81,11 @@
     (-&gt; (lib.wallet/load&amp; app-name wallet-name password)
         (lib.promise/then
          (fn [wallet]
-           (let [options (args-&gt;init-options args-map wallet)
-                 address (:wallet/address wallet)]
+           (let [options (args-&gt;init-options args-map wallet)]
              (-&gt; (sdk/init options)
                  (lib.promise/then
                   (fn [kbt]
-                    (-&gt; (sdk.core/authenticate! kbt address)
+                    (-&gt; (sdk.core/authenticate&amp; kbt)
                         (lib.promise/then on-authenticate)
                         (lib.promise/catch
                          (fn [e]
