deploy: ebb9e2234f480304ebf9f56482629fe976b1b4c3

--- a/com.kubelt.sdk.html
+++ b/com.kubelt.sdk.html
@@ -35,9 +35,7 @@
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
    [com.kubelt.sdk.v1 :as sdk.v1]
-   [com.kubelt.sdk.v1.core :as sdk.v1.core]
-   [com.kubelt.sdk.v1.resource :as sdk.v1.resource]
-   [com.kubelt.sdk.v1.workspace :as sdk.v1.workspace]))</pre>
+   [com.kubelt.sdk.v1.core :as sdk.v1.core]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -80,10 +78,6 @@
        :core #js {:authenticate sdk.v1.core/authenticate-js!
                   :isLoggedIn sdk.v1.core/logged-in-js?
                   :setWallet sdk.v1.core/set-wallet-js}
-       ;; resource
-       :resource #js {:add sdk.v1.resource/add-js!}
-       ;; workspace
-       :workspace #js {:available sdk.v1.workspace/available-js!}
        ;; development (removed from production builds)
        ;; TODO
        ;;:develop #js {:rpc #js {:call sdk.v1.develop.rpc/call-js!}}
