--- a/com.kubelt.ddt.cmds.rpc.core.profile.set.html
+++ b/com.kubelt.ddt.cmds.rpc.core.profile.set.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.core</h1>
+							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.core.profile.set</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -31,11 +31,11 @@
 					<p>RPC core options</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.core
+					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.core.profile.set
   {:copyright &quot;ⓒ2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.ddt.cmds.rpc.core.config :as core.config]
-   [com.kubelt.ddt.cmds.rpc.core.profile :as core.profile]))</pre>
+   [com.kubelt.ddt.cmds.rpc.call :as rpc.call ]
+   [com.kubelt.ddt.options :as ddt.options]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -44,13 +44,14 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defonce command
-  {:command &quot;core &lt;command&gt;&quot;
-   :desc &quot;Work with RPC core APIs&quot;
-   :builder (fn [^js yargs]
-              (-&gt; yargs
-                  (.command (clj-&gt;js core.config/command))
-                  (.command (clj-&gt;js core.profile/command))
-                  (.demandCommand)))})</pre>
+  {:command &quot;set &lt;profile-value&gt;&quot;
+   :desc &quot;Make an RPC call to set profile value (by default in json)&quot;
+   :requiresArg true
+   :builder (fn [^Yargs yargs]
+              (ddt.options/options yargs)
+              (.option yargs rpc.call/ethers-rpc-name rpc.call/ethers-rpc-config)
+              (.option yargs rpc.call/edn-name rpc.call/edn-value))
+   :handler (rpc.call/ddt-rpc-call &quot;:kb:set:profile&quot; [:profile-value])})</pre>
 				</td>
 			</tr>
 			<tr>
