--- a/index.html
+++ b/index.html
@@ -327,6 +327,15 @@
 								<a href="com.kubelt.ddt.cmds.rpc.core.config.set.html">com.kubelt.ddt.cmds.rpc.core.config.set</a>
 							</li>
 							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.core.profile.html">com.kubelt.ddt.cmds.rpc.core.profile</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.core.profile.get.html">com.kubelt.ddt.cmds.rpc.core.profile.get</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.core.profile.set.html">com.kubelt.ddt.cmds.rpc.core.profile.set</a>
+							</li>
+							<li>
 								<a href="com.kubelt.ddt.cmds.rpc.ls.html">com.kubelt.ddt.cmds.rpc.ls</a>
 							</li>
 							<li>
@@ -577,6 +586,9 @@
 							</li>
 							<li>
 								<a href="com.kubelt.lib.rdf.util.html">com.kubelt.lib.rdf.util</a>
+							</li>
+							<li>
+								<a href="com.kubelt.lib.rpc.html">com.kubelt.lib.rpc</a>
 							</li>
 							<li>
 								<a href="util.cljc.html">util.cljc</a>
