--- a/com.kubelt.ddt.cmds.rpc.core.config.get.html
+++ b/com.kubelt.ddt.cmds.rpc.core.config.get.html
@@ -34,13 +34,8 @@
 					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.core.config.get
   {:copyright &quot;ⓒ2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.ddt.auth :as ddt.auth]
    [com.kubelt.ddt.cmds.rpc.call :as rpc.call]
-   [com.kubelt.ddt.options :as ddt.options]
-   [com.kubelt.ddt.prompt :as ddt.prompt]
-   [com.kubelt.ddt.util :as ddt.util]
-   [com.kubelt.lib.promise :as lib.promise]
-   [com.kubelt.sdk.v1.core :as sdk.core]))</pre>
+   [com.kubelt.ddt.options :as ddt.options]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -55,27 +50,7 @@
    :builder (fn [^Yargs yargs]
               (ddt.options/options yargs)
               (.option yargs rpc.call/ethers-rpc-name rpc.call/ethers-rpc-config))
-   :handler (fn [args]
-              (aset args &quot;method&quot; &quot;:kb:get:config&quot;)
-              (let [args (rpc.call/rpc-args args)
-                    path (ddt.util/rpc-name-&gt;path (get args :path ))]
-                (ddt.prompt/ask-password!
-                 (fn [err result]
-                   (ddt.util/exit-if err)
-                   (ddt.auth/authenticate
-                    args
-                    (.-password result)
-                    (fn [sys]
-                      (-&gt; (sdk.core/rpc-api sys (-&gt; sys :crypto/wallet :wallet/address))
-                          (lib.promise/then
-                           (fn [api]
-                             (-&gt; (rpc.call/rpc-call&amp; sys api args)
-                                 (lib.promise/then #(println &quot;-&gt; &quot; %))
-                                 (lib.promise/catch #(println &quot;ERROR-&gt; &quot; %)))))
-                          (lib.promise/catch
-                           (fn [e]
-                             (println (ex-message e))
-                             (prn (ex-data e)))))))))))})</pre>
+   :handler (rpc.call/ddt-rpc-call &quot;:kb:get:config&quot;)})</pre>
 				</td>
 			</tr>
 			<tr>
